Changes for 3.2.5rc1

New features:

Bug fixes:
.......PS. [ZBX-11855] fixed data truncation when escaping strings that contain carriage return (vso)
........S. [ZBX-11444] fixed incorrect check for time functions in recovery expressions (abs)
.......PS. [ZBX-11758] fixed crash in web monitoring when variable is empty or the first step was called regexp function on Solaris (Sergejs)
.......PS. [ZBX-11765] fixed incorrect rollback in process of escalation for DB2 database (Sergejs)

--------------------------------------------------------------------------------
Changes for 3.2.4

New features:
A.F....... [ZBX-1357] updated Chinese (China), Czech, French, Japanese, Polish, Portuguese (Brazil) translations; thanks to Zabbix translators (zalex_ua)

--------------------------------------------------------------------------------
Changes for 3.2.4rc1

New features:
.......PS. [ZBXNEXT-3681] improved bulk inserts for Oracle database backend (wiper)
........S. [ZBXNEXT-3669] optimized trigger expression batch processing to avoid recalculation of identical functions (wiper)
..F.....S. [ZBXNEXT-3572] added option to control amount of queued items (vjaceslavs)

Bug fixes:
...G...... [ZBX-11568] fixed incorrect number rounding for CPU statistics (abs)
........S. [ZBX-11781] fixed potential integer underflow/overflow in the housekeeper process (abs)
.......PS. [ZBX-10902] fixed wrong averages in web monitoring if a web server doesn't respond to a request (abs)
..F....... [ZBX-11365] fixed button and multiselect positioning in action operations edit form (Ivo, Pavel)
........S. [ZBX-11740] fixed empty value handling in event correlation on oracle databases (wiper)
.......PS. [ZBX-11655] fixed Oracle and MySQL column limit calculation when using UTF-8 (vso)
........S. [ZBX-11703] removed possibility to execute commit without transaction in processing LLD rules (Sergejs)
........S. [ZBX-11705] fixed event correlation when using databases other than mysql (wiper)